force-app/main/default/objects/Other_Bank__c/Other_Bank__c.object-meta.xml
<CustomObject>
    <label>Other Bank</label>
    <nameField>
        <displayFormat>OB-{000000}</displayFormat>
        <label>Other Bank Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Other Bank</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>