force-app/main/default/objects/Other_Bank__c/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Other Banks</relationshipLabel>
    <relationshipName>Other_Banks</relationshipName>
    <type>Lookup</type>
</CustomField>