force-app/main/default/objects/Other_Bank__c/fields/ttb_Cust_ID__c.field-meta.xml
<CustomField>
    <fullName>ttb_Cust_ID__c</fullName>
    <formula>Customer__r.TMB_Customer_ID_PE__c</formula>
    <label>ttb Cust ID</label>
    <type>Text</type>
</CustomField>