force-app/main/default/objects/Other_Bank__c/fields/Wallet_Category__c.field-meta.xml
<CustomField>
    <fullName>Wallet_Category__c</fullName>
    <label>Wallet Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Savings</fullName>
            </value>
            <value>
                <fullName>Spending</fullName>
            </value>
            <value>
                <fullName>Borrowing</fullName>
            </value>
            <value>
                <fullName>Investment</fullName>
            </value>
            <value>
                <fullName>Protection</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>