force-app/main/default/objects/Other_Bank__c/validationRules/Can_save_record_if_is_RM_owner.validationRule-meta.xml
<ValidationRule>
    <fullName>Can_save_record_if_is_RM_owner</fullName>
    <active>true</active>
    <errorConditionFormula>(  $Profile.Name != &apos;Retail Integration API Only&apos;)
&amp;&amp;
NOT(CONTAINS( $Profile.Name,&apos;Admin&apos;))
&amp;&amp;
$User.Id  &lt;&gt; Customer__r.RTL_Wealth_RM__r.Id
&amp;&amp;
 text(Category__c) != &apos;ttb&apos;</errorConditionFormula>
    <errorMessage>Only RM of the customer may create new or update record</errorMessage>
</ValidationRule>